--- a/TaskAssignmentSystem/Views/Home/Index.cshtml
+++ b/TaskAssignmentSystem/Views/Home/Index.cshtml
@@ -332,11 +332,11 @@
                 <h4>Workspaces</h4>
                 <p>Create and manage educational workspaces for different classes and projects</p>
             </div>
-            <div class="feature-card">
+            @* <div class="feature-card">
                 <span class="feature-icon">👥</span>
                 <h4>User Management</h4>
                 <p>Efficiently organize students, teachers, and administrators in your system</p>
-            </div>
+            </div> *@
             <div class="feature-card">
                 <span class="feature-icon">✅</span>
                 <h4>Task Assignment</h4>
